--- a/nb/py/ca_45_46.ipynb
+++ b/nb/py/ca_45_46.ipynb
@@ -11,7 +11,7 @@
     "For each distribution we will:\n",
     "\n",
     "- plot the distribution\n",
-    "- salculate the quartiles and the iqr\n",
+    "- calculate the quartiles and the iqr\n",
     "- construct of a table of the deciles\n",
     "\n",
     "Both activities follow the same algorithm.\n",
@@ -140,7 +140,7 @@
     }
    ],
    "source": [
-    "# calculate the median alpha=0.5\n",
+    "# calculate the median\n",
     "an_expon.ppf(q=0.5)"
    ]
   },
@@ -407,7 +407,7 @@
     }
    ],
    "source": [
-    "# calculate the median alpha=0.5\n",
+    "# calculate the median\n",
     "a_binom.ppf(q=0.5)"
    ]
   },
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "2.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
        "8     0.9  6.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
