--- a/notebooks-py/c-01-slr-1.ipynb
+++ b/notebooks-py/c-01-slr-1.ipynb
@@ -198,12 +198,12 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,auto:percent"
+   "formats": "ipynb,py:percent"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.2 64-bit",
+   "display_name": "Python 3.8",
    "language": "python",
-   "name": "python38264bit42cc30f2071844968108c09d90e27cee"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -215,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.10"
   },
   "metadata": {
    "interpreter": {
